--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,6 +2,491 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy.stats as stats\n",
+    "import numpy as np\n",
+    "import math\n",
+    "import pandas as pd\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>displacement</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>model</th>\n",
+       "      <th>origin</th>\n",
+       "      <th>car_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>31.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>65.00</td>\n",
+       "      <td>1773.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>71</td>\n",
+       "      <td>3</td>\n",
+       "      <td>toyota corolla 1200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>321</th>\n",
+       "      <td>32.2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>108.0</td>\n",
+       "      <td>75.00</td>\n",
+       "      <td>2265.0</td>\n",
+       "      <td>15.2</td>\n",
+       "      <td>80</td>\n",
+       "      <td>3</td>\n",
+       "      <td>toyota corolla</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86</th>\n",
+       "      <td>14.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>304.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>3672.0</td>\n",
+       "      <td>11.5</td>\n",
+       "      <td>73</td>\n",
+       "      <td>1</td>\n",
+       "      <td>amc matador</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>250.0</td>\n",
+       "      <td>78.00</td>\n",
+       "      <td>3574.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>76</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ford granada ghia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>360</th>\n",
+       "      <td>30.7</td>\n",
+       "      <td>6</td>\n",
+       "      <td>145.0</td>\n",
+       "      <td>76.00</td>\n",
+       "      <td>3160.0</td>\n",
+       "      <td>19.6</td>\n",
+       "      <td>81</td>\n",
+       "      <td>2</td>\n",
+       "      <td>volvo diesel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77</th>\n",
+       "      <td>22.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>121.0</td>\n",
+       "      <td>76.00</td>\n",
+       "      <td>2511.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>72</td>\n",
+       "      <td>2</td>\n",
+       "      <td>volkswagen 411 (sw)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>346</th>\n",
+       "      <td>32.3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>67.00</td>\n",
+       "      <td>2065.0</td>\n",
+       "      <td>17.8</td>\n",
+       "      <td>81</td>\n",
+       "      <td>3</td>\n",
+       "      <td>subaru</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>9.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>304.0</td>\n",
+       "      <td>193.0</td>\n",
+       "      <td>4732.0</td>\n",
+       "      <td>18.5</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>hi 1200d</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>320</th>\n",
+       "      <td>37.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>119.0</td>\n",
+       "      <td>92.00</td>\n",
+       "      <td>2434.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>80</td>\n",
+       "      <td>3</td>\n",
+       "      <td>datsun 510 hatchback</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>355</th>\n",
+       "      <td>33.7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>107.0</td>\n",
+       "      <td>75.00</td>\n",
+       "      <td>2210.0</td>\n",
+       "      <td>14.4</td>\n",
+       "      <td>81</td>\n",
+       "      <td>3</td>\n",
+       "      <td>honda prelude</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356</th>\n",
+       "      <td>32.4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>108.0</td>\n",
+       "      <td>75.00</td>\n",
+       "      <td>2350.0</td>\n",
+       "      <td>16.8</td>\n",
+       "      <td>81</td>\n",
+       "      <td>3</td>\n",
+       "      <td>toyota corolla</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>264</th>\n",
+       "      <td>18.1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>302.0</td>\n",
+       "      <td>139.0</td>\n",
+       "      <td>3205.0</td>\n",
+       "      <td>11.2</td>\n",
+       "      <td>78</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ford futura</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>384</th>\n",
+       "      <td>32.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>67.00</td>\n",
+       "      <td>1965.0</td>\n",
+       "      <td>15.7</td>\n",
+       "      <td>82</td>\n",
+       "      <td>3</td>\n",
+       "      <td>honda civic (auto)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>289</th>\n",
+       "      <td>16.9</td>\n",
+       "      <td>8</td>\n",
+       "      <td>350.0</td>\n",
+       "      <td>155.0</td>\n",
+       "      <td>4360.0</td>\n",
+       "      <td>14.9</td>\n",
+       "      <td>79</td>\n",
+       "      <td>1</td>\n",
+       "      <td>buick estate wagon (sw)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>14.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>318.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>4077.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>72</td>\n",
+       "      <td>1</td>\n",
+       "      <td>plymouth satellite custom (sw)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>267</th>\n",
+       "      <td>27.5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>134.0</td>\n",
+       "      <td>95.00</td>\n",
+       "      <td>2560.0</td>\n",
+       "      <td>14.2</td>\n",
+       "      <td>78</td>\n",
+       "      <td>3</td>\n",
+       "      <td>toyota corona</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>397</th>\n",
+       "      <td>31.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>119.0</td>\n",
+       "      <td>82.00</td>\n",
+       "      <td>2720.0</td>\n",
+       "      <td>19.4</td>\n",
+       "      <td>82</td>\n",
+       "      <td>1</td>\n",
+       "      <td>chevy s-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>380</th>\n",
+       "      <td>36.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>88.00</td>\n",
+       "      <td>2160.0</td>\n",
+       "      <td>14.5</td>\n",
+       "      <td>82</td>\n",
+       "      <td>3</td>\n",
+       "      <td>nissan stanza xe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>232.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>3288.0</td>\n",
+       "      <td>15.5</td>\n",
+       "      <td>71</td>\n",
+       "      <td>1</td>\n",
+       "      <td>amc matador</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>144</th>\n",
+       "      <td>31.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>52.00</td>\n",
+       "      <td>1649.0</td>\n",
+       "      <td>16.5</td>\n",
+       "      <td>74</td>\n",
+       "      <td>3</td>\n",
+       "      <td>toyota corona</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      mpg  cylinders  displacement horsepower  weight  acceleration  model  \\\n",
+       "53   31.0          4          71.0      65.00  1773.0          19.0     71   \n",
+       "321  32.2          4         108.0      75.00  2265.0          15.2     80   \n",
+       "86   14.0          8         304.0      150.0  3672.0          11.5     73   \n",
+       "200  18.0          6         250.0      78.00  3574.0          21.0     76   \n",
+       "360  30.7          6         145.0      76.00  3160.0          19.6     81   \n",
+       "77   22.0          4         121.0      76.00  2511.0          18.0     72   \n",
+       "346  32.3          4          97.0      67.00  2065.0          17.8     81   \n",
+       "28    9.0          8         304.0      193.0  4732.0          18.5     70   \n",
+       "320  37.0          4         119.0      92.00  2434.0          15.0     80   \n",
+       "355  33.7          4         107.0      75.00  2210.0          14.4     81   \n",
+       "356  32.4          4         108.0      75.00  2350.0          16.8     81   \n",
+       "264  18.1          8         302.0      139.0  3205.0          11.2     78   \n",
+       "384  32.0          4          91.0      67.00  1965.0          15.7     82   \n",
+       "289  16.9          8         350.0      155.0  4360.0          14.9     79   \n",
+       "75   14.0          8         318.0      150.0  4077.0          14.0     72   \n",
+       "267  27.5          4         134.0      95.00  2560.0          14.2     78   \n",
+       "397  31.0          4         119.0      82.00  2720.0          19.4     82   \n",
+       "380  36.0          4         120.0      88.00  2160.0          14.5     82   \n",
+       "37   18.0          6         232.0      100.0  3288.0          15.5     71   \n",
+       "144  31.0          4          76.0      52.00  1649.0          16.5     74   \n",
+       "\n",
+       "     origin                        car_name  \n",
+       "53        3             toyota corolla 1200  \n",
+       "321       3                  toyota corolla  \n",
+       "86        1                     amc matador  \n",
+       "200       1               ford granada ghia  \n",
+       "360       2                    volvo diesel  \n",
+       "77        2             volkswagen 411 (sw)  \n",
+       "346       3                          subaru  \n",
+       "28        1                        hi 1200d  \n",
+       "320       3            datsun 510 hatchback  \n",
+       "355       3                   honda prelude  \n",
+       "356       3                  toyota corolla  \n",
+       "264       1                     ford futura  \n",
+       "384       3              honda civic (auto)  \n",
+       "289       1         buick estate wagon (sw)  \n",
+       "75        1  plymouth satellite custom (sw)  \n",
+       "267       3                   toyota corona  \n",
+       "397       1                      chevy s-10  \n",
+       "380       3                nissan stanza xe  \n",
+       "37        1                     amc matador  \n",
+       "144       3                   toyota corona  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cars_df = pd.read_csv('data/cars.csv')\n",
+    "cars_df = cars_df[cars_df['horsepower'] != '?']\n",
+    "cars_df.sample(20)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Columns: MPG, Cylinders, Displacement, Weight, Acceleration, Model, Origin, Car Name\n",
+    "- 398 samples, no missing data, all data was numeric except Car Name\n",
+    "- 6 rows had '?' as the value for horsepower, those rows were removed"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Interested in difference in MPG or US-made and Japanese-made 4-cylinder vehicles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# cars_df_sorted = cars_df[cars_df['cylinders'] == 4].groupby(cars_df['origin']).count()\n",
+    "# cars_df_sorted.head()\n",
+    "\n",
+    "\n",
+    "# creating new df with only American and Japanese manufactured vehicles that are 4-cylinders\n",
+    "\n",
+    "cars_df = cars_df[(cars_df['origin'] != 2) & (cars_df['cylinders'] == 4)]\n",
+    "cars_df\n",
+    "# cars_df.groupby(cars_df['origin']).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mean</th>\n",
+       "      <th>STD</th>\n",
+       "      <th>Sample Size</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>origin</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>28.013043</td>\n",
+       "      <td>4.566596</td>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>31.595652</td>\n",
+       "      <td>5.435787</td>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Mean       STD  Sample Size\n",
+       "origin                                  \n",
+       "1       28.013043  4.566596           69\n",
+       "3       31.595652  5.435787           69"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def sample_calcs(col1, col2='origin'):\n",
+    "    \n",
+    "    col1_df = pd.DataFrame()\n",
+    "    col1_df['Mean'] = cars_df.groupby(col2)[col1].mean()\n",
+    "    col1_df['STD'] = cars_df.groupby(col2)[col1].std()\n",
+    "    col1_df['Sample Size'] = cars_df.groupby(col2)[col1].count()\n",
+    "\n",
+    "    return col1_df\n",
+    "\n",
+    "sample_calcs('mpg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def graph_samp_dist(mean, std, sample_size, color):\n",
+    "\n",
+    "    std_error = std / np.sqrt(sample_size)\n",
+    "    sample_dist_mean = stats.norm(mean, std_error)  \n",
+    "    xs = np.linspace(mean-(4*std_error), mean+(4*std_error), 300)\n",
+    "\n",
+    "    pdfs = sample_dist_mean.pdf(xs)\n",
+    "\n",
+    "    ax.plot(xs, pdfs, color=color)\n",
+    "\n",
+    "\n",
+    "graph_samp_dist"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -15,8 +500,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.13 (main, Aug 25 2022, 18:29:29) \n[Clang 12.0.0 ]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
