--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -460,9 +460,7 @@
     "    col1_df['STD'] = cars_df.groupby(col2)[col1].std()\n",
     "    col1_df['Sample Size'] = cars_df.groupby(col2)[col1].count()\n",
     "\n",
-    "    return col1_df\n",
-    "\n",
-    "sample_calcs('mpg')"
+    "    return col1_df\n"
    ]
   },
   {
@@ -482,7 +480,8 @@
     "    ax.plot(xs, pdfs, color=color)\n",
     "\n",
     "\n",
-    "graph_samp_dist"
+    "comparison_df = sample_calcs('mpg')\n",
+    "graph_samp_dist(comparison_df)"
    ]
   },
   {
